--- a/assignment_1/AssignmentReport-Group1.ipynb
+++ b/assignment_1/AssignmentReport-Group1.ipynb
@@ -71,7 +71,7 @@
    "metadata": {},
    "source": [
     "## Task 2d)\n",
-    "FILL IN ANSWER"
+    "Early stopped at epoch 33"
    ]
   },
   {
@@ -79,7 +79,8 @@
    "metadata": {},
    "source": [
     "## Task 2e)\n",
-    "FILL IN ANSWER\n",
+    "With shuffling the validation accuracy has less spikes because the spikes are \"flattened\" by the shuffling. Without shuffling we would see these difficult batches repeating, because the same difficult batches are trained/validated throuhgout the training process. With shuffling, however, we rarely see the same batch multiple times, so the difficult batch is evenly distributed among the other batches, resulting in less spikes.\n",
+    "\n",
     "![](task2e_train_accuracy_shuffle_difference.png)"
    ]
   },
