--- a/assignment_1/AssignmentReport-Group1.ipynb
+++ b/assignment_1/AssignmentReport-Group1.ipynb
@@ -112,7 +112,7 @@
    "metadata": {},
    "source": [
     "## Task 3d)\n",
-    "FILL IN ANSWER"
+    "As we can see in the accuracy graph in 3c), the model has high training accuracy but lower validation accuracy; this is a sign of overfitting as the model works well on training data but not so well on new, unseen data."
    ]
   },
   {
