Task 4 done and cleaned task3a

--- a/assignment_1/AssignmentReport-Group1.ipynb
+++ b/assignment_1/AssignmentReport-Group1.ipynb
@@ -1,46 +1,38 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# Assignment 1 Report"
-   ]
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This is an outline for your report to ease the amount of work required to create your report. Jupyter notebook supports markdown, and I recommend you to check out this [cheat sheet](https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet). If you are not familiar with markdown.\n",
-    "\n",
-    "Before delivery, **remember to convert this file to PDF**. You can do it in two ways:\n",
-    "1. Print the webpage (ctrl+P or cmd+P)\n",
-    "2. Export with latex. This is somewhat more difficult, but you'll get somehwat of a \"prettier\" PDF. Go to File -> Download as -> PDF via LaTeX. You might have to install nbconvert and pandoc through conda; `conda install nbconvert pandoc`."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# Task 1"
-   ]
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "## task 1a)\n",
+    "\n",
+    "<img src=\"./res/task1a_1.svg\" width=\"700\">\n",
+    "<img src=\"./res/task1a_2.svg\" width=\"700\">\n",
+    "<img src=\"./res/task1a_3.svg\" width=\"700\">"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## task 1a)\n",
+    "## task 1b)\n",
     "\n",
-    "Fill in task 1a image of hand-written notes which are easy to read, or latex equations here"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## task 1a)\n",
-    "\n",
-    "Fill in task 1a image of hand-written notes which are easy to read, or latex equations here"
+    "<img src=\"./res/task1b_1.svg\" width=\"700\">\n",
+    "<img src=\"./res/task1b_2.svg\" width=\"700\">"
    ]
   },
   {
@@ -71,7 +63,7 @@
    "metadata": {},
    "source": [
     "## Task 2d)\n",
-    "Early stopped at epoch 33"
+    "Early stopped at epoch 33."
    ]
   },
   {
@@ -112,7 +104,7 @@
    "metadata": {},
    "source": [
     "## Task 3d)\n",
-    "As we can see in the accuracy graph in 3c), the model has high training accuracy but lower validation accuracy; this is a sign of overfitting as the model works well on training data but not so well on new, unseen data."
+    "As we can see in the accuracy graph in 3c), the model has high training accuracy but lower validation accuracy; this is a sign of overfitting as the model works well on training data but not so well on new unseen data."
    ]
   },
   {
@@ -128,7 +120,8 @@
    "source": [
     "## Task 4a)\n",
     "\n",
-    "Fill in image of hand-written notes which are easy to read, or latex equations here"
+    "<img src=\"./res/task4a_1.svg\" width=\"700\">\n",
+    "<img src=\"./res/task4a_2.svg\" width=\"700\">\n"
    ]
   },
   {
@@ -136,7 +129,8 @@
    "metadata": {},
    "source": [
     "## Task 4b)\n",
-    "FILL IN ANSWER\n",
+    "\n",
+    "The model with λ=1.0 (bottom) is less noisy than the one with λ=0.0 (top) because L2 regularization restricts the weights from becoming too large, which is the whole point of regularization (to penalize the model for being too complex).\n",
     "\n",
     "![](task4b_softmax_weight.png)"
    ]
@@ -146,7 +140,6 @@
    "metadata": {},
    "source": [
     "## Task 4c)\n",
-    "FILL IN ANSWER\n",
     "\n",
     "![](task4c_l2_reg_accuracy.png)"
    ]
@@ -156,7 +149,8 @@
    "metadata": {},
    "source": [
     "## Task 4d)\n",
-    "![](task4d_l2_reg_norms.png)"
+    "\n",
+    "The validation error degrades when we apply higher regularization values because regularization restricts the model from becoming too complex, which in this case backfires, resulting in a more uncertain model. A less complex model can prevent overfitting, but it can also prevent the model from learning correctly, possibly resulting in an underfitted model."
    ]
   },
   {
@@ -164,7 +158,10 @@
    "metadata": {},
    "source": [
     "## Task 4e)\n",
-    "FILL IN ANSWER"
+    "\n",
+    "We can see that as λ decrases, the L2 norm increases. This means that higher λ results in less large weights and many smaller weights instead. In other words, higher λ values result in more punishing of large weights.\n",
+    "\n",
+    "![](task4d_l2_reg_norms.png)"
    ]
   }
  ],
