--- a/assignment_1/AssignmentReport-Group1.ipynb
+++ b/assignment_1/AssignmentReport-Group1.ipynb
@@ -18,9 +18,9 @@
    "source": [
     "## task 1a)\n",
     "\n",
-    "<img src=\"./res/task1a_1.svg\" width=\"700\">\n",
-    "<img src=\"./res/task1a_2.svg\" width=\"700\">\n",
-    "<img src=\"./res/task1a_3.svg\" width=\"700\">"
+    "<img src=\"./res/task1a_1.png\" width=\"700\">\n",
+    "<img src=\"./res/task1a_2.png\" width=\"700\">\n",
+    "<img src=\"./res/task1a_3.png\" width=\"700\">"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -31,8 +31,8 @@
    "source": [
     "## task 1b)\n",
     "\n",
-    "<img src=\"./res/task1b_1.svg\" width=\"700\">\n",
-    "<img src=\"./res/task1b_2.svg\" width=\"700\">"
+    "<img src=\"./res/task1b_1.png\" width=\"700\">\n",
+    "<img src=\"./res/task1b_2.png\" width=\"700\">"
    ]
   },
   {
@@ -120,8 +120,8 @@
    "source": [
     "## Task 4a)\n",
     "\n",
-    "<img src=\"./res/task4a_1.svg\" width=\"700\">\n",
-    "<img src=\"./res/task4a_2.svg\" width=\"700\">\n"
+    "<img src=\"./res/task4a_1.png\" width=\"700\">\n",
+    "<img src=\"./res/task4a_2.png\" width=\"700\">\n"
    ]
   },
   {
