--- a/assignment_1/AssignmentReport-Group1.ipynb
+++ b/assignment_1/AssignmentReport-Group1.ipynb
@@ -18,9 +18,9 @@
    "source": [
     "## task 1a)\n",
     "\n",
-    "<img src=\"./res/task1a_1.png\" width=\"700\">\n",
-    "<img src=\"./res/task1a_2.png\" width=\"700\">\n",
-    "<img src=\"./res/task1a_3.png\" width=\"700\">"
+    "<img src=\"res/task1a_1.png\" width=\"700\" />\n",
+    "<img src=\"res/task1a_2.png\" width=\"700\" />\n",
+    "<img src=\"res/task1a_3.png\" width=\"700\" />"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -31,8 +31,8 @@
    "source": [
     "## task 1b)\n",
     "\n",
-    "<img src=\"./res/task1b_1.png\" width=\"700\">\n",
-    "<img src=\"./res/task1b_2.png\" width=\"700\">"
+    "<img src=\"res/task1b_1.png\" width=\"700\" />\n",
+    "<img src=\"res/task1b_2.png\" width=\"700\" />"
    ]
   },
   {
@@ -71,7 +71,7 @@
    "metadata": {},
    "source": [
     "## Task 2e)\n",
-    "With shuffling the validation accuracy has less spikes because the spikes are \"flattened\" by the shuffling. Without shuffling we would see these difficult batches repeating, because the same difficult batches are trained/validated throuhgout the training process. With shuffling, however, we rarely see the same batch multiple times, so the difficult batch is evenly distributed among the other batches, resulting in less spikes.\n",
+    "With shuffling the validation accuracy has less spikes because the spikes are \"flattened\" by the shuffling. Without shuffling we would see these difficult batches repeating, because the same difficult batches are trained/validated throughout the training process. With shuffling, however, we rarely see the same batch multiple times, so the difficult batch is evenly distributed among the other batches, resulting in less spikes.\n",
     "\n",
     "![](task2e_train_accuracy_shuffle_difference.png)"
    ]
@@ -120,8 +120,8 @@
    "source": [
     "## Task 4a)\n",
     "\n",
-    "<img src=\"./res/task4a_1.png\" width=\"700\">\n",
-    "<img src=\"./res/task4a_2.png\" width=\"700\">\n"
+    "<img src=\"res/task4a_1.png\" width=\"700\" />\n",
+    "<img src=\"res/task4a_2.png\" width=\"700\" />\n"
    ]
   },
   {
@@ -159,7 +159,7 @@
    "source": [
     "## Task 4e)\n",
     "\n",
-    "We can see that as λ decrases, the L2 norm increases. This means that higher λ results in less large weights and many smaller weights instead. In other words, higher λ values result in more punishing of large weights.\n",
+    "We can see that as λ decreases, the L2 norm increases. This means that higher λ results in less large weights and many smaller weights instead. In other words, higher λ values result in more punishing of large weights.\n",
     "\n",
     "![](task4d_l2_reg_norms.png)"
    ]
