--- a/assignment_2/AssignmentReport-Group1.ipynb
+++ b/assignment_2/AssignmentReport-Group1.ipynb
@@ -63,7 +63,16 @@
    "metadata": {},
    "source": [
     "## Task 2d)\n",
-    "FILL IN ANSWER"
+    "\n",
+    "The neural network has 784 input nodes + 1 for the bias trick, 64 hidden nodes and 10 outputs nodes. The input layer does not have weights/bias so we only calculate parameters for the hidden and outputs layers. All layers are fully connected.\n",
+    "\n",
+    "Hidden layer:\n",
+    "64 * 785 = 50240\n",
+    "\n",
+    "Output layer:\n",
+    "10 * 64 = 640\n",
+    "\n",
+    "For a total of 50240 + 640 = 50880 parameters."
    ]
   },
   {
