Task 3. Added improved weight initalization, improved sigmoid and momentum

--- a/assignment_2/AssignmentReport-Group1.ipynb
+++ b/assignment_2/AssignmentReport-Group1.ipynb
@@ -86,8 +86,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "FILL IN ANSWER.\n",
-    "Maybe include a loss / accuracy plot here?"
+    "As we can see on the plot each improvement step also improves the model's loss/accuracy, except for the model with momentum.\n",
+    "\n",
+    "Weight initalization results in earlier stopping and this combined with the improved sigmoid funcion results in even earlier stopping. However, when we add momentum the needs a longer time to train, as well as the fact that the loss/accuracy is made worse.\n",
+    "\n",
+    "The green model has a steep learning curve in the beginning which quickly flattens out. This can be a sign of a too high learning rate for that particular case.\n",
+    "\n",
+    "Momentum does not seem to be a good solution to this problem. As the paper mentiones \"*Momentum can increase speed when the cost surface is highly nonspherical because it damps the size og the step along directions of high curvature thus yielding a larger effective learning rate along the directions of low curvature.*\". One explanation is that momentum is not a good fit for the data, or that the learning rate is too high.\n",
+    "\n",
+    "![](task3_loss.png)\n",
+    "\n",
+    "All models also have higher validation accuracy than training accuracy, which can be a sign of overfitting as the model does not work that good on new unseen data, although a final accuracy of around 0.96 is good.\n",
+    "\n",
+    "![](task3_accuracy.png)"
    ]
   },
   {
