--- a/assignment_2/AssignmentReport-Group1.ipynb
+++ b/assignment_2/AssignmentReport-Group1.ipynb
@@ -140,7 +140,7 @@
     "\n",
     "As we can see, by reducing the first hidden layer from 64 nodes to 60 nodes, we can actually add a whole new hidden layer with 60 nodes and still keep the parameter count about the same.\n",
     "\n",
-    "As we can see ...\n",
+    "As we can see the model with two hidden layers gets a little bit lower accuracy, but has a lower training loss and a higher validation loss. It seems that the original model generalizes better than the two-hidden-layer model.\n",
     "\n",
     "![](task4d.png)"
    ]
