--- a/assignment_3/AssignmentReport-Group1.ipynb
+++ b/assignment_3/AssignmentReport-Group1.ipynb
@@ -11,17 +11,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is an outline for your report to ease the amount of work required to create your report. Jupyter notebook supports markdown, and I recommend you to check out this [cheat sheet](https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet). If you are not familiar with markdown.\n",
-    "\n",
-    "Before delivery, **remember to convert this file to PDF**. You can do it in two ways:\n",
-    "1. Print the webpage (ctrl+P or cmd+P)\n",
-    "2. Export with latex. This is somewhat more difficult, but you'll get somehwat of a \"prettier\" PDF. Go to File -> Download as -> PDF via LaTeX. You might have to install nbconvert and pandoc through conda; `conda install nbconvert pandoc`."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Task 1"
    ]
   },
@@ -31,7 +20,9 @@
    "source": [
     "## task 1a)\n",
     "\n",
-    "Fill in image of hand-written notes which are easy to read, or latex equations here"
+    "This solution is taken from my solution to task 1f) in image processing assingment 1 in TDT4195 previous semester, as the task was identical to this task. I chose to handle borders with **same padding**, becasue the output dimension should be equal to the input dimension. Furthermore, the padding is a **clip filter** as the padding consists of only zeros. This was the simplest to implement.\n",
+    "\n",
+    "![](task1_a.png)"
    ]
   },
   {
@@ -40,27 +31,52 @@
    "source": [
     "## task 1b)\n",
     "\n",
-    "Fill in image of hand-written notes which are easy to read, or latex equations here\n",
+    "The convolutional layer, as it does not care about the feature's position.\n",
     "\n",
     "## task 1c)\n",
     "\n",
-    "Fill in task 1a image of hand-written notes which are easy to read, or latex equations here\n",
+    "2 on each side.\n",
     "\n",
-    "## task 1c)\n",
+    "![](task1_c.png)\n",
     "\n",
-    "Fill in task 1a image of hand-written notes which are easy to read, or latex equations here\n",
     "## task 1d)\n",
     "\n",
-    "Fill in task 1a image of hand-written notes which are easy to read, or latex equations here\n",
+    "For a sqaure image, with a square filter we have:\n",
+    "\n",
+    "$outputDim = (inputDim - filterDim + 2 * padding) / stride + 1$  \n",
+    "$(outputDim - 1) * stride = inputDim - filterDim + 2 * padding$  \n",
+    "$(outputDim - 1) * stride - inputDim- 2 * padding = -filterDim$  \n",
+    "$filterDim = -((outputDim - 1) * stride - inputDim - 2 * padding)$  \n",
+    "$filterDim = -(outputDim - 1) * stride + inputDim + 2 * padding)$  \n",
+    "$filterDim = -(504 - 1) * 1 + 2 * 0 + 512)$  \n",
+    "$filterDim = - 503 + 512 = 9$\n",
+    "\n",
+    "Thus, each kernel is $9x9$.\n",
+    "\n",
     "## task 1e)\n",
     "\n",
-    "Fill in task 1a image of hand-written notes which are easy to read, or latex equations here\n",
+    "If we perform pooling/subsampling with a 2x2 kernel on a 504x504 layer with a stride of 2, we will simply half the image's height and width, because each 2x2 pixel-block will be reduced to a single pixel. Thus, the output, after the pooling layer, is 252x252.\n",
+    "\n",
     "## task 1f)\n",
     "\n",
-    "Fill in task 1a image of hand-written notes which are easy to read, or latex equations here\n",
+    "$outputDim = (252 - 3 + 2 * 0) / 1 + 1 = 249 + 0 + 1 = 250$\n",
+    "\n",
+    "Thus, the output dimension is 250x250.\n",
+    "\n",
     "## task 1g)\n",
     "\n",
-    "Fill in task 1a image of hand-written notes which are easy to read, or latex equations here"
+    "A square-filter convolutional layer has $F^2*inputChannels*outputChannels+outputChannels$ parameters, where bias is also given by $outputChannels$.\n",
+    "\n",
+    "Layer 1: $5^2*3*32+32=2,432$  \n",
+    "Layer 2: $5^2*32*64+64=51,264$  \n",
+    "Layer 3: $5^2*64*128+128=204,928$  \n",
+    "\n",
+    "Now, we need to find the input dimension to the fully connected network. After three 2x2 max-pooling operations with a stride of 2, and an input image of 32x32, we get $32/2^3=4$. We have 128 such images (i.e., channels). Thus, the FCNN has an input dimension of $4^2*128$\n",
+    "\n",
+    "Layer 4: $4^2*128*64+64=131,136$  \n",
+    "Layer 5: $64*10+10=650$  \n",
+    "\n",
+    "For a total of $2,432+51,264+204,928+131,136+650=390,410$ parameters in the network."
    ]
   },
   {
