--- a/assignment_3/AssignmentReport-Group1.ipynb
+++ b/assignment_3/AssignmentReport-Group1.ipynb
@@ -87,7 +87,17 @@
     "\n",
     "### Task 2a)\n",
     "\n",
-    "### Task 2b)"
+    "![](plots/task2_plot.png)\n",
+    "\n",
+    "### Task 2b)\n",
+    "\n",
+    "Training Loss: 0.49  \n",
+    "Validation Loss: 0.85  \n",
+    "Testing Loss: 0.87  \n",
+    "\n",
+    "Training Accuracy: 0.830  \n",
+    "Validation Accuracy: 0.712  \n",
+    "Testing Accuracy: 0.719  "
    ]
   },
   {
