Task 4a done. Improved data loader by adding optional parameters

--- a/assignment_3/AssignmentReport-Group1.ipynb
+++ b/assignment_3/AssignmentReport-Group1.ipynb
@@ -132,7 +132,15 @@
    "source": [
     "## Task 4a)\n",
     "\n",
-    "FILL IN ANSWER. "
+    "Training Loss: 0.03  \n",
+    "Validation Loss: 0.30  \n",
+    "Testing Loss: 0.35  \n",
+    "\n",
+    "Training Accuracy: 0.989  \n",
+    "Validation Accuracy: 0.907  \n",
+    "Testing Accuracy: 0.901\n",
+    "\n",
+    "![](task4a_plot.png)"
    ]
   },
   {
