Task 4b and 4c done

--- a/assignment_3/AssignmentReport-Group1.ipynb
+++ b/assignment_3/AssignmentReport-Group1.ipynb
@@ -148,7 +148,20 @@
    "metadata": {},
    "source": [
     "## Task 4b)\n",
-    "FILL IN ANSWER\n"
+    "\n",
+    "Original image:\n",
+    "\n",
+    "![](images/zebra.jpg)\n",
+    "\n",
+    "The five activations and weights explained:  \n",
+    "1. This filter looks like a vertical edge-detection filter. We see that the Zebra's vertical stripes are clear, while the horizontal line between the sky and the grass (blue-green) is nearly gone.  The weights looks like the vertical Sobel-operator, which confirms this.  \n",
+    "2. This filter looks like a horizontal edge-detection filter as the sky-grass line and the zebra's horizontal lines are visible, while the vertical lines are more faded. The weights looks like the horizontal Sobel-operator, which confirms this.  \n",
+    "3. This filter is used to detect blue values, as the sky is lit. We can see that the blue weights are highly represented.  \n",
+    "4. This filter looks something like the Laplacian of Gaussian filter but only for left-diagonal edge detection. We see that the zebra's left-diagonal edges are visible, while the right-diagonal edges are blurred out. This applies especially for high contrast edges such as black-white-edges.  \n",
+    "5. This filter is used to detect green values, as the grass is lit. We can see that the green weights are highly represented.  \n",
+    "\n",
+    "\n",
+    "![](plots/task4b.png)"
    ]
   },
   {
@@ -156,7 +169,12 @@
    "metadata": {},
    "source": [
     "## Task 4c)\n",
-    "FILL IN ANSWER"
+    "\n",
+    "Well, it is difficult to understand these deep activations. The earlier layers of a CNN works with low-level features (e.g., edge detection) as we can still see a zebra in the activations of the first layer. As we go deeper down the network, these features are abstracted away more and more as it tries to fit the important information into the classifier.\n",
+    "\n",
+    "Activations for the last layer in ResNet:\n",
+    "\n",
+    "![](plots/task4c.png)"
    ]
   }
  ],
