--- a/assignment_3/AssignmentReport-Group1.ipynb
+++ b/assignment_3/AssignmentReport-Group1.ipynb
@@ -112,11 +112,98 @@
    "metadata": {},
    "source": [
     "### Task 3a)\n",
+    "\n",
+    "Model 1\n",
+    "\n",
+    "| Layer |    Layer type   | Number of hidden units/number of filters | Activation function |\n",
+    "|:-----:|:---------------:|:----------------------------------------:|:-------------------:|\n",
+    "|   1   |      Conv2d     |                    32                    |         ReLU        |\n",
+    "|   1   |      Conv2d     |                    32                    |         ReLU        |\n",
+    "|   1   |    MaxPool2d    |                     -                    |          -          |\n",
+    "|   1   |   BatchNorm2d   |                     -                    |          -          |\n",
+    "|       |                 |                                          |                     |\n",
+    "|   2   |      Conv2d     |                    64                    |         ReLU        |\n",
+    "|   2   |      Conv2d     |                    128                   |         ReLU        |\n",
+    "|   2   |    MaxPool2d    |                     -                    |          -          |\n",
+    "|   2   |   BatchNorm2d   |                     -                    |          -          |\n",
+    "|       |                 |                                          |                     |\n",
+    "|   3   |      Conv2d     |                    128                   |         ReLU        |\n",
+    "|   3   |      Conv2d     |                    128                   |         ReLU        |\n",
+    "|   3   |    MaxPool2d    |                     -                    |          -          |\n",
+    "|   3   |   BatchNorm2d   |                     -                    |          -          |\n",
+    "|       |                 |                                          |                     |\n",
+    "|       |     Flatten     |                     -                    |                     |\n",
+    "|   4   | Fully connected |                    128                   |         ReLU        |\n",
+    "|   5   | Fully connected |                    64                    |         ReLU        |\n",
+    "|   6   | Fully connected |                    10                    |       SoftMax       |\n",
+    "\n",
+    "- Batch size: 64\n",
+    "- Learning rate: 0.001\n",
+    "- Data augmentation: `transforms.RandomHorizontalFlip()`\n",
+    "- Optimizer: Adam\n",
+    "- Weight initialization: PyTorch default\n",
+    "- Regularization: PyTorch default\n",
+    "\n",
+    "Model 2\n",
+    "\n",
+    "| Layer |    Layer type   | Number of hidden units/number of filters | Activation function |\n",
+    "|:-----:|:---------------:|:----------------------------------------:|:-------------------:|\n",
+    "|   1   |      Conv2d     |                    32                    |         ReLU        |\n",
+    "|   1   |    MaxPool2d    |                     -                    |          -          |\n",
+    "|   1   |   BatchNorm2d   |                     -                    |          -          |\n",
+    "|       |                 |                                          |                     |\n",
+    "|   2   |      Conv2d     |                    64                    |         ReLU        |\n",
+    "|   2   |    MaxPool2d    |                     -                    |          -          |\n",
+    "|   2   |   BatchNorm2d   |                     -                    |          -          |\n",
+    "|       |                 |                                          |                     |\n",
+    "|   3   |      Conv2d     |                    128                   |         ReLU        |\n",
+    "|   3   |    MaxPool2d    |                     -                    |          -          |\n",
+    "|   3   |   BatchNorm2d   |                     -                    |          -          |\n",
+    "|       |                 |                                          |                     |\n",
+    "|       |     Flatten     |                     -                    |                     |\n",
+    "|   4   | Fully connected |                    128                   |         ReLU        |\n",
+    "|   5   | Fully connected |                    64                    |         ReLU        |\n",
+    "|   6   | Fully connected |                    10                    |       SoftMax       |\n",
+    "\n",
+    "- Batch size: 64\n",
+    "- Learning rate: 0.001\n",
+    "- Data augmentation: None\n",
+    "- Optimizer: Adam\n",
+    "- Weight initialization: PyTorch default\n",
+    "- Regularization: PyTorch default\n",
+    "\n",
     "### Task 3b)\n",
+    "\n",
+    "| Model   | Training loss   | Training accuracy   | Validation accuracy   | Test accuracy |\n",
+    "|:-------:|:---------------:|:-------------------:|:---------------------:|:-------------:|\n",
+    "|    1    |       0.22      |        0.925        |         0.834         |     0.826     |\n",
+    "|    2    |       0.21      |        0.927        |         0.774         |     0.764     |\n",
+    "\n",
+    "Best model (model 1):\n",
+    "\n",
+    "![](plots/task3_model_1_plot.png)\n",
+    "\n",
     "### Task 3c)\n",
+    "\n",
+    "The Adam optimizer increased the performance of about all my models. Data augmentation seemed to incrase the model's performance as well. Also, 3x3 filters seemed to work better than 5x5 filters. The Adam optimizer resulted in improved models because it is said to be an extension (and thereby an improvement in some cases) of SGD, as it has dynamic learning rate and is efficient. Data augmentation resulted in better models because it extends the dataset, leading to a more general model.\n",
+    "\n",
+    "Smaller neural networks (feature extractors) seemed to perform worse than larger. Adjusting the convolutional layers to use both 5x5 and 3x3 filters did not perform good. Batch normalization in the neural network did not show promising results for me.\n",
+    "\n",
     "### Task 3d)\n",
+    "\n",
+    "In model 2 I saw the largest improvement when using the Adam optimizer over SGD, as seen in the plot.\n",
+    "\n",
+    "![](plots/task3_model_2_plot.png)\n",
+    "\n",
     "### Task 3e)\n",
-    "### Task 3f)"
+    "\n",
+    "Final test accuracy: 0.834\n",
+    "\n",
+    "![](plots/task3_model_1_plot.png)\n",
+    "\n",
+    "### Task 3f)\n",
+    "\n",
+    "The model's accuracy graph shows signs of overfitting. The validation accuracy is about 10 % worse than the training accuracy, meaning the model works better on the training data, and not so well on new, unseen data. This can also be seen in the small upward spike in validation loss in the last epoch, but luckily early stopping kicks in."
    ]
   },
   {
