Fixed assignemnt 3 task 1b after feedback

--- a/assignment_3/AssignmentReport-Group1.ipynb
+++ b/assignment_3/AssignmentReport-Group1.ipynb
@@ -31,7 +31,7 @@
    "source": [
     "## task 1b)\n",
     "\n",
-    "The convolutional layer, as it does not care about the feature's position.\n",
+    "The pooling layer removes small translational shifts in the input. The convolutional layer is sensitive to these shifts, but the output of a 2x2 max pool layer will be identical.\n",
     "\n",
     "## task 1c)\n",
     "\n",
